wvstreams (3.73+20030321-1) unstable; urgency=high

  * Synchronised with Upstream CVS.

  * Acknowledge NMU. (Closes: #141409)
  
  * Add Debian revision number. (Closes: #141456)
  
  * Additional packaging fixes to move libwvstreams-dev into the devel
    section, and libwvstreams-doc into the doc section, also fixed a
    problem with the installer. (Closes: #166208, #166210)

  * Added a WvQT class to enable WvStreams and QT programs to play nice

  * Rewrite of the Encryption stuff to use the new encoders

  * Rewrite of the WvBuffers

  * New WvOggEncoder/WvOggDecoder

  * New WvGtk classes to make WvStreams and Gtk play nice with each other

  * Now with new AutoConf goodness ;)

  * Fixes to make it build with GCC-3.2 (Closes: #166662)

  * Fixes to build the documentation properly (Closes: #158326)

  * Clarify package descriptions. (Closes: #184829)
  
 -- Patrick Patterson <ppatters@debian.org>  Tue, 28 Jan 2003 14:35:49 -0500

wvstreams (3.70.1) unstable; urgency=low

  * NMU
  * Build shared objects -fPIC.  Closes: #141409

 -- LaMont Jones <lamont@debian.org>  Tue, 23 Apr 2002 23:58:57 -0600

wvstreams (3.70) unstable; urgency=high

  * Fix to WvPipe so that WvDial doesn't crash

  * Fix to WvString formatter to fix retchmail crasher

  * Various other fixes and cleanups. 

 -- Patrick Patterson <ppatters@debian.org>  Fri,  5 Apr 2002 13:39:21 -0500

wvstreams (3.69) unstable; urgency=low

  * Fix to make wvstreams compile without extra effort and environment
    variables

  * Fix to library includes to avoid linker problem

  * Patch from RedHat to make WvStreams 64 bit clean

  * Fix a buglet in WvLinkList that caused some breakage in WvDialConf

  * Debian Packaging Fixes

  * Initial Debian release (Closes: #134134)

 -- Patrick Patterson <ppatters@nit.ca>  Fri,  5 Apr 2002 13:39:11 -0500

libwvstreams3.60 (3.60f) unstable; urgency=low

  * Initial Release.

 -- Patrick Patterson <ppatters@nit.ca>  Tue,  9 Dec 1997 01:39:45 -0500
